2002-08-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl (emit_options_function): Emit newline at EOF.

2002-08-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Use $@-t instead of $@.tmp or $@.t.

2002-07-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl: New file.
	* Makefile.in (DISTFILES): Add it to the list.

2002-07-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/dasrt/Makefile to
	the list.

2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/odessa/Makefile to
	the list.

2002-05-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Maybe add -fno-coalesce-templates to XTRA_CXXFLAGS
	on darwin systems.
	(SH_LDFLAGS): Set this on darwin systems.
	(UGLY_DEFS): Cope with broken sed or shell quoting on darwin systems.

2002-05-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_CXX_ISO_COMPLIANT_LIBRARY): Omit cwctype.

2002-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_AIX): Move before AC_MINIX and AC_ISC_POSIX.
	(AH_BOTTOM): Move contents of acconfig.h here.
	* acconfig.h: Delete.
	* octMakefile.in (CONF_DISTFILES): Delete acconfig.h from the list.

2002-04-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/daspk/Makefile to
	the list.

2002-04-24  Kurt Hornik <hornik@ci.tuwien.ac.at>

	* aclocal.m4 (OCTAVE_CC_FLAG, OCTAVE_CXX_FLAG): Also handle flags
	that contain : and =.

2002-04-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.guess, config.sub: Update from FSF sources.

2002-04-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Declare F2C and F2CFLAGS with AC_ARG_VAR.
	Delete AC_SUBST calls for F77, FFLAGS, FLIBS, F2C, F2CFLAGS (no
	need to do this explicitly now).

2002-04-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Set and substitute EXEEXT, not EXE.

	* configure.in (EXE): Delete check and substitution.