@@ -30,8 +30,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <cfloat>
 #include <cmath>
 
-#include "DAE.h"
-
 #include "DASPK-opts.h"
 
 class
