@@ -30,9 +30,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <cfloat>
 #include <cmath>
 
-#include "dColVector.h"
-#include "NLFunc.h"
-
 #include "NLEqn-opts.h"
 
 class
